--- a/css/history.css
+++ b/css/history.css
@@ -132,6 +132,7 @@ header {
     width: 100%;
     padding: 40px;
     color: #555;
+    font-size: 14px;
     box-sizing: border-box;
     text-align: justify; }
 
