--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
 header {
   width: 100%;
   height: 70px;
-  position: fixed; }
+float: left;}
 
 body {
   background: #4db6ac;
@@ -38,13 +38,20 @@ body {
 
 .heading {
   width: 100%;
-  height: 100px;
+  height: 60px;
   text-align: center;
   padding-top: 30px;
-  font-size: 60px;
+  font-size: 40px;
+  float: left;
   color: #fff;
   font-weight: 100; }
-
+.logo img{
+  width: 100%;
+}
+.logo{
+  width: 250px;
+  margin: auto;
+}
 .villages {
   width: 70%;
   margin: 0 15%;
