--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ body {
       background-image: url('../images/batta.jpg');
     }
     #mankheri{
-      background-image: url('../images/mankheri.jpeg');
+      background-image: url('../images/mankheri.jpg');
     }
   .villages .filter {
     width: 100%;
