--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
 header {
   width: 100%;
   height: 70px;
-float: left;}
+  position: fixed; }
 
 body {
   background: #4db6ac;
@@ -38,20 +38,13 @@ body {
 
 .heading {
   width: 100%;
-  height: 60px;
+  height: 100px;
   text-align: center;
   padding-top: 30px;
-  font-size: 40px;
-  float: left;
+  font-size: 60px;
   color: #fff;
   font-weight: 100; }
-.logo img{
-  width: 100%;
-}
-.logo{
-  width: 250px;
-  margin: auto;
-}
+
 .villages {
   width: 70%;
   margin: 0 15%;
@@ -65,7 +58,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;}
     #gharuan{
-      background-image: url('../images/gharuan.jpeg');
+      background-image: url('../images/Gharuan1.jpg');
     }
     #mamupur{
       background-image: url('../images/mamupur.jpg');
@@ -80,7 +73,7 @@ body {
       background-image: url('../images/batta.jpg');
     }
     #mankheri{
-      background-image: url('../images/mankheri.jpg');
+      background-image: url('../images/mankheri.JPG');
     }
   .villages .filter {
     width: 100%;
@@ -140,3 +133,34 @@ body {
         font-size: 13px; } }
 
 /*# sourceMappingURL=style.css.map */
+.button1 {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+.button2 {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+.button3 {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
